--- a/Views/Movies/Index.cshtml
+++ b/Views/Movies/Index.cshtml
@@ -17,7 +17,7 @@
         </select>
 
         Title: <input type="text" asp-for="SearchString" />
-        Price: <input type="text" asp-for="PriceMinimum" /> To <input type="text" asp-for="PriceMaximum" />
+        Price: <input type="text" asp-for="PriceMinimum" /> To <input type="text" asp-for="PriceMaximum" /> @* Add the input for priceMinimum and priceMaximum *@
         <input type="submit" value="Filter" />
     </p>
 </form>
